Refactor response handling and use virtual threads for Http Server Executor (#9)
* Refactor response handling to improve consistency and clarity

Centralized response handling across the codebase using a unified `Response` object approach. Deprecated specific response methods in `ResponseHandler` in favor of a streamlined `handleResponse` method for better flexibility. Adjusted related test cases and minor logic updates to align with the new response structure.

* Use virtual threads for HTTP server executor

Replaced the cached thread pool with a virtual thread-per-task executor to improve resource efficiency and scalability. This change leverages modern concurrency mechanisms for better performance with high loads.

* Remove unused static variable from ResponseHandler

The static variable `count` was declared but never used in the code. Removing it improves code clarity and eliminates unnecessary clutter. This change has no impact on functionality.